--- a/beranda.html
+++ b/beranda.html
@@ -122,17 +122,10 @@
         </div>
       </div>
 
-      <div id"content-3">
-        <div class="container">
-          <h2 class="text-center text-uppercase"><b>Peta Lubuklinggau</b></h2>
-          <hr>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d151585.09479853287!2d102.82755275690418!3d-3.2617043496197717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e30e3d792264a93%3A0xf3b774bc72930511!2sLubuklinggau+City%2C+South+Sumatra!5e0!3m2!1sen!2sid!4v1494724189759" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-      </div>
-
       <div id="content-4">
         <div class="row">
           <div class="container">
+
             <div class="col-md-6">
               <h3 class="text-uppercase"><b>Berita Terbaru</b></h3>
               <hr>
@@ -167,23 +160,20 @@
                 <footer>Kamis, 17 Januari 2016</footer>
               </blockquote>
               <hr>
-              <a href="#!"><h4>Lubuklinggau Mendapat Bantuan!</h4></a>
-              <blockquote>
-                <p>Alhamdulilah, segala puja dan puji syukur kepada Allah Rabbul A'lamin yang telah mempermudah ekonomi kota Lubuklinggau dengan memberikan rejeki berupa investasi...</p>
-                <footer>Kamis, 17 Januari 2016</footer>
-              </blockquote>
+
 
               <div id="more">
                 <center><a href="berita.html" class="more label label-danger">selengkapnya di berita ></a></center>
               </div>
             </div>
 
-
-            <div class="col-md-6">
+            <div class="col-md-1">
+            </div>
+            <div class="col-md-5">
               <h3 class="text-uppercase"><b>Jadwal Terbaru</b></h3>
               <hr>
               <div class="list-group">
-                <a href="#!" class="list-group-item active">
+                <a href="#!" class="list-group-item">
                   <h4 class="list-group-item-header">Buka Puasa Bersama</h4>
                   <p class="list-group-item-text">14 - 05 - 2017 at Restoran Khalid Basalamah</p>
                 </a>
@@ -224,6 +214,16 @@
           </div>
         </div>
       </div>
+
+      <div id"content-3">
+        <div class="container">
+          <h2 class="text-center text-uppercase"><b>Peta Lubuklinggau</b></h2>
+          <hr>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d151585.09479853287!2d102.82755275690418!3d-3.2617043496197717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e30e3d792264a93%3A0xf3b774bc72930511!2sLubuklinggau+City%2C+South+Sumatra!5e0!3m2!1sen!2sid!4v1494724189759" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+
 
       <div id="footer-beranda">
         <div class="jumbotron">
