--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+
+<style>
+#vidcontent {
+width:100%;
+height:450px;
+border:2px solid #F00;
+object-fit:cover; /* for those who do support it */
+}
+
+#myCarousel .nav a small {
+    display:block;
+}
+#myCarousel .nav {
+	background:#eee;
+}
+#myCarousel .nav a {
+    border-radius:0px;
+}
+</style>
   </head>
   <body>
 
@@ -20,67 +40,61 @@
   </div>
 
   <!--Bagian Slider video dan foto --->
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <video width="100%" height="450" autoplay loop>
-        <source src="video/1.mp4" type="video/mp4">
-      </video>
-      <div class="carousel-caption">
-        <h3>Selamat Datang</h3>
-        <p>Ini merupakan sebuah portal website milik pemerintah Kota Lubuklinggau</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/1.jpg" style="height: 450px; width: 100%;" alt="" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Alun-Alun</h3>
-        <p>Kota Lubuklinggau juga mempunyai alun-alun yang mempunyai banyak wisata yang indah</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/2.jpeg" style="height: 450px; width: 100%;" alt="" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Car Free Day</h3>
-        <p>Di Kota Lubuklinggau juga mempunyai program yang bernama Car Free Day.</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/2.jpeg" style="height: 450px; width: 100%;" alt="" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Stasiun Kota Baru</h3>
-        <p>Merupakan sebuah stasiun yang tertua di Kota Lubuklinggau dan masih aktif sampai sekarang</p>
-      </div>
-    </div>
-    <div class="item">
-      <img src="images/2.jpeg" style="height: 450px; width: 100%;" alt="" class="img-responsive">
-      <div class="carousel-caption">
-        <h3>Ijen Boulevard</h3>
-        <p>Jalur hijau yang di hiasi bunga Bougenvil dan pohon Palem dengan latar belakang perumahan bergaya kolonial Belanda.</p>
-      </div>
-    </div>
-  </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <i class="material-icons" style="color: white; font-size: 5em; margin-top: 40%;">chevron_left</i>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <i class="material-icons" style="color: white; font-size: 5em; margin-top: 40%;">chevron_right</i>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+
+        <div class="item active">
+          <video id="vidcontent" width="900" height="400" autoplay loop muted>
+        <source src="video/2.mp4" type="video/mp4">
+    </video>
+           <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div><!-- End Item -->
+
+         <div class="item">
+          <img src="http://placehold.it/1200x400/">
+           <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div><!-- End Item -->
+
+        <div class="item">
+          <img src="http://placehold.it/1200x400/dddddd/333333">
+           <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <a href="http://sevenx.de/demo/bootstrap-carousel/" target="_blank" class="label label-danger">Bootstrap 3 - Carousel Collection</a></p>
+          </div>
+        </div><!-- End Item -->
+
+        <div class="item">
+          <img src="http://placehold.it/1200x400/999999/cccccc">
+           <div class="carousel-caption">
+            <h3>Headline</h3>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+          </div>
+        </div><!-- End Item -->
+
+      </div><!-- End Carousel Inner -->
+
+
+    	<ul class="nav nav-pills nav-justified">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#">About<small>Lorem ipsum dolor sit</small></a></li>
+          <li data-target="#myCarousel" data-slide-to="1"><a href="#">Projects<small>Lorem ipsum dolor sit</small></a></li>
+          <li data-target="#myCarousel" data-slide-to="2"><a href="#">Portfolio<small>Lorem ipsum dolor sit</small></a></li>
+          <li data-target="#myCarousel" data-slide-to="3"><a href="#">Services<small>Lorem ipsum dolor sit</small></a></li>
+        </ul>
+
+
+    </div><!-- End Carousel -->
+
 
   <!--Bagian Menu-Menu --->
   <div id="menu-awal">
@@ -417,5 +431,31 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script>
+  $(document).ready( function() {
+    $('#myCarousel').carousel({
+		interval:   4000
+	});
+
+	var clickEvent = false;
+	$('#myCarousel').on('click', '.nav a', function() {
+			clickEvent = true;
+			$('.nav li').removeClass('active');
+			$(this).parent().addClass('active');
+	}).on('slid.bs.carousel', function(e) {
+		if(!clickEvent) {
+			var count = $('.nav').children().length -1;
+			var current = $('.nav li.active');
+			current.removeClass('active').next().addClass('active');
+			var id = parseInt(current.data('slide-to'));
+			if(count == id) {
+				$('.nav li').first().addClass('active');
+			}
+		}
+		clickEvent = false;
+	});
+});
+  </script>
+
   </body>
 </html>
